src/objects/fc_csc__Invoice_Item__c.object
<CustomObject>
    <description>Zuora Invoice Item</description>
    <fields>
        <fullName>fc_csc__Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__ChargeAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__ChargeDate__c</fullName>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__CreatedById__c</fullName>
        <label>Created By Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fc_csc__Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__ProcessingType__c</fullName>
        <label>Processing Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fc_csc__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fc_csc__Recognized_Revenue_Accounting_Code__c</fullName>
        <label>Recognized Revenue Accounting Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__RevRecStartDate__c</fullName>
        <label>Rev Rec Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__SKU__c</fullName>
        <label>SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__ServiceEndDate__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__ServiceStartDate__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__SubscriptionId__c</fullName>
        <label>Zuora Subscription Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__TaxAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__TaxExemptAmount__c</fullName>
        <label>Tax Exempt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__UOM__c</fullName>
        <label>UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__UnitPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__UpdatedById__c</fullName>
        <label>Updated By Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__UpdatedDate__c</fullName>
        <label>Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fc_csc__Zuora_Id__c</fullName>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>